--- a/src/App/UserBundle/Resources/views/Security/login.html.twig
+++ b/src/App/UserBundle/Resources/views/Security/login.html.twig
@@ -4,7 +4,7 @@
 
 
 
-{% block login %}
+{% block header %}
     
 <div>
             {% if is_granted("IS_AUTHENTICATED_REMEMBERED") %}
@@ -70,4 +70,4 @@
                             </form>
         </div>	
     </div>    
-    {% endblock login %}
+    {% endblock header %}
