--- a/src/App/AppBundle/Resources/views/frame.html.twig
+++ b/src/App/AppBundle/Resources/views/frame.html.twig
@@ -3,7 +3,7 @@
 	<head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>FastRelais</title>
+        <title>FAST RELAIS {% block title %}| ACCUEIL{% endblock title %}</title>
         <link rel="icon" type="image/x-icon" href="img/favicon.png" />
         
         <link href="{{ asset('includes/css/master.css') }}" rel="stylesheet">
@@ -17,6 +17,11 @@
 		<link rel="alternate stylesheet" type="text/css" href="{{ asset('includes/assets/switcher/css/color5.css') }}" title="color5" media="all" />
 		<link rel="alternate stylesheet" type="text/css" href="{{ asset('includes/assets/switcher/css/color6.css') }}" title="color6" media="all" />
         
+                <script>
+                $(function() {
+                  $( ".datepicker" ).datepicker();
+                });
+                </script>
         <!--[if lt IE 9]>
           <script src="//oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
           <script src="//oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
@@ -35,8 +40,12 @@
 						<div class="col-xs-7 text-right">
 							<div class="row">
 								<div class="h-login col-sm-7">
-									<a href="#" class="h-a-login">Se connecter</a>
-									<a href="#" class="h-a-register">S'inscrire</a>
+                                                                        {% if is_granted('ROLE_USER') %}
+                                                                            <a href="{{ path('fos_user_security_logout') }}" class="h-a-login">Se deconnecter</a>
+                                                                        {% else %}
+                                                                            <a href="{{ path('fos_user_security_login') }}" class="h-a-login">Se connecter</a>
+                                                                            <a href="{{ path('fos_user_registration_register') }}" class="h-a-register">S'inscrire</a>
+                                                                        {% endif %}
 								</div>			
 							</div>			
 						</div>
@@ -48,7 +57,7 @@
 					<div class="m1170">
 						<div class="col-sm-4 col-xs-10 h-logo">
 							<div class="logotype">
-								<a href="01-home-1.html"><img src="{{ asset('includes/img/logo.png') }}" alt="wd" height="50"></a>
+								<a href="{{ path('app_homepage') }}"><img src="{{ asset('includes/img/logo.png') }}" alt="wd" height="50"></a>
 							</div><div class="clearfix"></div>
 						</div>
 						<div class="col-sm-8 col-xs-2 h-menu padding0">
@@ -57,7 +66,7 @@
 								<div class="nav-container container-fluid padding0">
 									<i class="fa fa-times close-menu mobileMenuSwitcher onlyMobileMenu"></i>
 									<ul class="nav navbar-nav navbar-main navbar-right">
-										<li><a href="10-contact.html">ACCUEIL</a></li>
+										<li><a href="{{ path('app_homepage') }}">ACCUEIL</a></li>
 										<li class="dropdown">
 											<a href="03-category-1.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Mon compte <i class="fa fa-angle-down"></i></a>
 											<ul class="dropdown-menu">
@@ -73,13 +82,15 @@
 												<li><a href="09-pricing.html">Historique</a></li>	
 											</ul>
 										</li>
-										<li class="dropdown">
+                                                                                {% if is_granted('ROLE_FAST_RELAIS') %}
+                                                                                    <li class="dropdown">
 											<a href="08-blog-details.html" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Espace FastRelais <i class="fa fa-angle-down"></i></a>
 											<ul class="dropdown-menu">
 												<li><a href="08-blog-details.html">Mes demandes</a></li>
 												<li><a href="09-pricing.html">Mes disponibiltés</a></li>	
 											</ul>
-										</li>
+                                                                                    </li>
+                                                                                {% endif %}
 										<li><a href="10-contact.html">CONTACT</a></li>
 										<li class="h-submit-listing"><a href="06-listing-details.html"><span class="h-plus">+</span> Devenir FASTRELAIS</a></li>
 									</ul>
@@ -89,9 +100,9 @@
 					</div>
 				</div>
                                 <!-- END HEADER -->
-                                {% block login %}
+                                {% block header %}
                     
-                                {% endblock login %}
+                                {% endblock header %}
 			</div>
 			<div class="clearfix"></div>
 		</header>	
@@ -102,6 +113,18 @@
 			
 		<footer>
 			<div class="container-fluid">
+                            <div class="row f-first-row newsletter" data-wow-delay="0.7s" data-wow-duration="1.5s" style="margin-top: 60px!important;">
+					<div class="col-sm-6 f-newsletter-l">
+						<h3><b class="colorfff uppercase">S'abonner à la Newsletter</b></h3>
+						S'abonner pour une newsletter mensuel
+					</div>
+					<div class="col-sm-6 newsletter-bg padding0">
+						<div class="newsletter-input">
+							<input class="newsletter-inpup-field width100">
+							<input type="submit" value="SIGNUP" class="newsletter-signup f-right">
+						</div>
+					</div>
+				</div>
 				<div class="row f-second-row footer">
 					<div class="m1170">
 						<div class="col-sm-4 f-1td top40" data-wow-delay="0.7s" data-wow-duration="1.5s">
