--- a/src/App/UserBundle/Resources/views/Registration/register.html.twig
+++ b/src/App/UserBundle/Resources/views/Registration/register.html.twig
@@ -1,5 +1,5 @@
 {% extends "AppBundle::frame.html.twig" %}
 
-{% block login %}
+{% block header %}
 {% include "FOSUserBundle:Registration:register_content.html.twig" %}
-{% endblock login %}
+{% endblock header %}
