Ajout de l'adressPicker à l'accueil + js + css

--- a/src/App/AppBundle/Resources/views/Default/index.html.twig
+++ b/src/App/AppBundle/Resources/views/Default/index.html.twig
@@ -21,7 +21,7 @@
                                     <div class="col-sm-3 p-left0 p-right0">
                                             <div class="btn-group width100">
                                                     <div class="custom-select select-type4 location">
-                                                        <input class="form-1-style1 border1 location"  style="height: 48px" placeholder="Adresse de livraison"><i class="fa fa-map-marker" style="font-size: 20px;"></i></input>
+                                                        <input id="addresspicker" class="form-1-style1 border1 location"  style="height: 48px" placeholder="Adresse de livraison"><i class="fa fa-map-marker" style="font-size: 20px;"></i></input>
                                                     </div>
                                             </div>
                                     </div>
