Creation de la DB + les entités (la DB.sql est dans le dossier DB)

--- a/src/App/UserBundle/Resources/views/Registration/register_content.html.twig
+++ b/src/App/UserBundle/Resources/views/Registration/register_content.html.twig
@@ -65,6 +65,7 @@
                         <i class="divider" role="separator"></i>
                         <a href="#"><div class="update-listings-btn b-radius3"><b>S'inscrire</b></div></a>
                         <input type="submit" value="{{ 'registration.submit'|trans }}" />
+                        <input type="submit" style="font-weight: bold;"  value="S'inscrire" class="update-listings-btn b-radius3"/>
                     {{ form_end(form) }}    
                 </div>
         </div>	
